Let background to match animation color and height to prevent load shift.

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,5 +1,7 @@
 .hero {
     position: relative;
+    height: 235.753px;
+    background-color: #E5FAEB;
 }
 .site-info {
     width: 100%;
